# cicd_tools

./: .bumpversion.cfg  .gitignore  MANIFEST.in  README.md  pyproject.toml
.app_cache/: config.yaml
cicd_tools/: __init__.py  cli.py
cicd_tools/menus/: __init__.py  app_menu.py  create_menu.py  menu_utils.py
cicd_tools/project_templates/: __init__.py
cicd_tools/project_templates/development_project/: .bumpversion.cfg.jinja  .pre-commit-config.yaml.jinja  copier.yaml  docker-compose.yml.jinja  pyproject.toml.jinja
cicd_tools/project_templates/development_project/.github/workflows/: deploy.yml.jinja
cicd_tools/project_templates/development_project/{{project_name.replace('-', '_')}}_module/: __init__.py.jinja
cicd_tools/project_templates/simple_project/: .gitignore.jinja  LICENSE.jinja  copier.yaml
cicd_tools/project_templates/simple_project/{{project_name.replace('-', '_')}}_module/: __init__.py.jinja
cicd_tools/project_types/: __init__.py  base_project.py  development_project.py  github_project.py  mixins.py  simple_project.py
cicd_tools/templates/: __init__.py  template_manager.py  template_utils.py
cicd_tools/utils/: __init__.py  config_manager.py  env_manager.py  jinja_utils.py
doc/: cicd_tools_architecture_plan.md  cicd_tools_architecture_plan_fixed.html  cicd_tools_implementation_plan.md
project_templates/development_project/: .bumpversion.cfg.jinja  .pre-commit-config.yaml.jinja  Dockerfile.jinja  README.md.jinja  copier.yaml  pyproject.toml.jinja
project_templates/development_project/.github/workflows/: deploy.yml.jinja  pytest.yml.jinja  release.yml.jinja
project_templates/development_project/tests/: __init__.py.jinja  test_main.py.jinja
project_templates/github_project/: README.md.jinja  copier.yaml
project_templates/github_project/.github/ISSUE_TEMPLATE/: bug_report.md.jinja
project_templates/github_project/.github/workflows/: pytest.yml.jinja
project_templates/simple_project/: .gitignore.jinja  LICENSE.jinja  README.md.jinja  copier.yaml  setup.py.jinja
project_templates/simple_project/.app_cache/: config.yaml.jinja
project_templates/simple_project/tests/: test_main.py.jinja
project_templates/simple_project/{{ project_name.replace('-', '_') }}/: __init__.py.jinja  main.py.jinja
project_templates/simple_project/{{project_name.replace('-', '_')}}_module/: main.py.jinja
tests/: __init__.py  conftest.py  test_config_manager.py  test_development_project_release.py  test_env_manager.py  test_menu_system.py  test_project_types.py  test_template_management.py
